# red-envelope

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  neo-manifest.json  netlify.toml  package.json  red-envelope.sln
contracts/: README.md  RedEnvelope.Admin.cs  RedEnvelope.Methods.cs  RedEnvelope.Pool.cs  RedEnvelope.Query.cs  RedEnvelope.Spreading.cs  RedEnvelope.cs  RedEnvelope.csproj  RedEnvelopeState.cs
contracts-rust/: README.md
contracts-rust/red-envelope-neo/: Cargo.toml  manifest.overlay.json
contracts-rust/red-envelope-neo/src/: contract_core.rs  lib.rs
contracts-rust/red-envelope-neo/src/rust_contract/: api.rs  constants.rs  logic.rs
contracts-solidity/: README.md  RedEnvelope.Actions.sol  RedEnvelope.Admin.sol  RedEnvelope.Internal.sol  RedEnvelope.Query.sol  RedEnvelope.Storage.sol  RedEnvelope.sol
contracts/.config/: dotnet-tools.json
frontend/: .env.example  .env.production  .eslintrc.cjs  .prettierrc  README.md  index.html  netlify.toml  package-lock.json  package.json
frontend/src/: App.vue  env.d.ts  main.ts
scripts/: .env.example  _preflight.js  analyze-rust-artifact-size.js  analyze-rust-size-root-cause.js  build-rust-neo-llvm.sh  build-solidity-neo-solc.sh  check-rust-size-gate.js  deploy-and-test-variants-testnet.js  deploy-mainnet.js  deploy-new.js  deploy-update.js  helpers.js  patch-neo-llvm-toolchain.sh  sync-manifest-abi-from-csharp.js  test-e2e.js  test-rust-onnep17-parity.js  test-testnet.js  update-contract.js  validate-csharp-solidity-parity.js  validate-local-manifest-parity.js  verify-network-parity.js
(+45 files in other folders)
